Added links to notebooks

--- a/_posts/2021-09-14-P3-IML.md
+++ b/_posts/2021-09-14-P3-IML.md
@@ -14,10 +14,10 @@ Le jeu de données utilisé est téléchargeable ici : [dataset](https://www.kag
 
 ## Analyse des données
 
-Avant de commencer l'analyse des données qui se trouve dans le notebook (POlist_01_notebookexploration). J'ai regardé les jeux de données un par un pour voir la manière dont ils étaient composés. Cette analyse se trouve dans un notebook annexe qui se nomme POlist_analysepreliminaire.
+Avant de commencer l'analyse des données qui se trouve dans le notebook ([POlist_01_notebookanalyse](https://github.com/Sylvariane/segmentez_les_clients/blob/main/POlist_01_notebookanalyse.ipynb)). J'ai regardé les jeux de données un par un pour voir la manière dont ils étaient composés. Cette analyse se trouve dans un notebook annexe qui se nomme [POlist_analysepreliminaire](https://github.com/Sylvariane/segmentez_les_clients/blob/main/POlist_analysepreliminaire.ipynb).
 Une fois cela effectué, il était demandé de faire une segmentation RFM ([explication ici](https://www.wizishop.fr/blog/dossier-la-segmentation-clients-la-methode-rfm-partie-2.html)). 
 On remarque une chose intéressante dans ce jeu de données, c'est que les clients ont tendance à n'effectuer qu'un seul achat. Cela rend donc la fréquence et dans une moindre mesure la récence comme étant moins discriminante. Le choix a été de créer les modèles de segmentation sur deux jeux de données :
-- un jeu de données total comprenant l'ensemble des clients et qui se trouve dans le notebook POlist_segmentation_totaldata
+- un jeu de données total comprenant l'ensemble des clients et qui se trouve dans le notebook [POlist_segmentation_totaldata](https://github.com/Sylvariane/segmentez_les_clients/blob/main/POlist_segmentation_totaldata.ipynb)
 - un jeu de données ré-échantillonée conservant les clients avec deux achats et plus ainsi que 40% de clients avec un seul achat. Cette étude est celle présentée dans le notebookt POlist_02_notebooktest et aussi dans les autres documents (pdf et rapport sous forme de notebook)
 
 ## Modélisation
